# ImagePy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  imagepy.spec  pyproject.toml  requirements-dev.txt  requirements.txt
imagepy/: __init__.py  __main__.py  app.py
imagepy/debug/: debug.py
imagepy/lab1/: histogram.py
imagepy/lab2/: histogram_manipulation.py  negation.py  threshold.py
imagepy/lab3/: image_calculator.py  image_math.py  utils.py
imagepy/lab4/: edge_detection.py  filter_operations.py  filters.py  median_blur_filter.py
imagepy/lab6/: binary_operations.py  measures.py
imagepy/lab_project/: logic_filter.py  plot_profile.py
imagepy/utils/: constants.py  image_manager.py  utils.py
imagepy/utils/gui/: menu.py  widgets.py
src/: app.py
src/debug/: debug.py
src/lab1/: histogram.py
src/lab2/: histogram_manipulation.py  negation.py  threshold.py
src/lab3/: image_calculator.py  image_math.py  utils.py
src/lab4/: edge_detection.py  filter_operations.py  filters.py  median_blur_filter.py
src/lab6/: binary_operations.py  measures.py
src/lab_project/: logic_filter.py  plot_profile.py
src/utils/: constants.py  image_manager.py  utils.py
src/utils/gui/: menu.py  widgets.py
tests/: mock_threshold_gui.py
