[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "image-py"
requires-python = ">= 3.11"
dependencies = [
    "Pillow==10.2.0",
    "opencv-python==4.9.0.80",
    "numpy==1.26.4",
]
authors = [
    { name = "Kacper Madej" },
]
maintainers = [
    { name = "Kacper Madej" },
]
description = "Python utility tool for image analysis"
readme = { file = "README.txt", content-type = "text/markdown" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Artistic Software",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "pre-commit==3.6.2",
    "mypy==1.9.0",
]
pyinstaller = [
    "pyinstaller==6.5.0",
]

[project.scripts]
imagepy = "imagepy.app:shell"

[project.gui-scripts]
imagepy-gui = "imagepy.app:shell"

[project.urls]
Repository = "https://github.com/KacperMayday/ImagePy.git"
Issues = "https://github.com/KacperMayday/ImagePy/issues"

[tool.setuptools.dynamic]
version = { attr = "imagepy.__version__" }

[tool.setuptools.packages.find]
include = ["imagepy*"]

[tool.mypy]
files = ["imagepy"]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
allow_untyped_globals = false
allow_redefinition = false
